--- a/onebox-technical-test/src/app/modules/pages/concert-catalog/concert-catalog.component.html
+++ b/onebox-technical-test/src/app/modules/pages/concert-catalog/concert-catalog.component.html
@@ -1,1 +1,31 @@
-<p>concert-catalog works!</p>
+<section class="container p-4 pt-5">
+  <div class="row">
+    <ng-container *ngFor="let event of events">
+      <div class="col-12 col-md-6 px-5 mb-3">
+        <div class="card">
+          <div class="card-header">
+            <h5 class="card-title">{{ event.title }}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{ event.subtitle }}</h6>
+          </div>
+          <img
+            src="{{ event.image }}"
+            class="card-img-top"
+            alt="placeholder-image"
+          />
+          <div class="card-body">
+            <p>
+              {{ event.startDate | date: "dd/MM/yyyy" }} -
+              {{ event.endDate | date: "dd/MM/yyyy" }}
+            </p>
+            <p><span innerHTML="{{ event.description }}"></span></p>
+          </div>
+          <div class="card-footer bg-primary">
+            <span class="text-white" routerLink="/shopping-cart/{{ event.id }}"
+              ><b>Comprar</b></span
+            >
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</section>
