--- a/onebox-technical-test/src/app/modules/pages/shopping-cart/shopping-cart.component.html
+++ b/onebox-technical-test/src/app/modules/pages/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,29 @@
-<p>shopping-cart works!</p>
+<section class="container">
+  <div class="row">
+    <div class="col-6">
+      <h2>Disponibilidad para el evento de {{ eventInfo.event.title }}</h2>
+      <div
+        class="v-shopping-cart p-3"
+        *ngIf="availableEvent; else notAvailableTemplate"
+      >
+        <div *ngFor="let session of eventInfo.sessions">
+          <div class="row">
+            <div class="col-6 v-shopping-cart__availability">
+              <p>Fecha: {{ session.date | date: "dd/MM/yyyy" }},</p>
+              <p>Disponibilidad: {{ session.availability }}</p>
+            </div>
+            <div class="text-end col-6">
+              <i class="bi bi-dash"></i>
+              <i class="bi bi-plus"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <ng-template #notAvailableTemplate>
+        <h1>EVENT INFO NOT FOUND</h1>
+      </ng-template>
+    </div>
+    <div class="col-6"></div>
+  </div>
+</section>
