--- a/onebox-technical-test/src/app/modules/pages/concert-catalog/concert-catalog.component.scss
+++ b/onebox-technical-test/src/app/modules/pages/concert-catalog/concert-catalog.component.scss
@@ -15,3 +15,18 @@
   text-align: center;
   cursor: pointer;
 }
+
+.pointer {
+  cursor: pointer;
+}
+
+h5,
+h6 {
+  margin-bottom: 0;
+}
+
+@media (max-width: 992px) {
+  p.v-only-big {
+    display: none;
+  }
+}
